--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-image-compress",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "compress image-type file in frontend using canvas",
   "main": "index.js",
   "scripts": {
@@ -16,9 +16,9 @@
   "license": "MIT",
   "repository": "https://github.com/XHMM/frontend-image-compress",
   "devDependencies": {
-    "gulp": "^4.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify-es": "^1.0.4",
-    "typescript": "^3.1.3"
+    "gulp": "4.0.0",
+    "gulp-rename": "1.4.0",
+    "gulp-uglify-es": "1.0.4",
+    "typescript": "3.2.1"
   }
 }
